# rust-k8s-cli-tool

./: Cargo.toml  README.md
src/: main.rs
