[package]
name = "k8s-namespace-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.52.0", features = ["derive"] }
clap = "2.33.3"

[dependencies.k8s-openapi]
version = "0.11.0"
features = ["v1_20"] # Make sure this matches your Kubernetes version
